Added Experience and Education

--- a/assignments/assignment-2/index.html
+++ b/assignments/assignment-2/index.html
@@ -9,8 +9,9 @@
         <h1>My Portfolio</h1>
         <h2>Aljhay Soriano</h2>
     </header>
-    <img> 
+    <img src="images/ProfilePic.jpeg" alt="Profile Pic" width="300" height="400"> 
     <h3>School Name: SFSU (San Francisco State University)</h3>
+    <img src="images/SFSULogo.jpg" alt="SFSU Logo" width="600" height="400">
     <h3>Hometown: Daly City, Ca.</h3>
 
     <h3>Profile Links:</h3>
@@ -19,5 +20,5 @@
     <a href="https://www.instagram.com/alj_sori/">Instagram</a>
     <a href="https://bento.me/aljhay">Bento</a>
     <p>fe</p>
-
+</body>
     
