--- a/assignments/assignment-2/index.html
+++ b/assignments/assignment-2/index.html
@@ -14,11 +14,33 @@
     <img src="images/SFSULogo.jpg" alt="SFSU Logo" width="600" height="400">
     <h3>Hometown: Daly City, Ca.</h3>
 
-    <h3>Profile Links:</h3>
+    <h3 id="profilelinks">Profile Links:</h3>
     <a href="https://github.com/asori0113">Github</a>
     <a href="https://leetcode.com/u/aljhayjhassoriano/">Leetcode Profile</a>
     <a href="https://www.instagram.com/alj_sori/">Instagram</a>
     <a href="https://bento.me/aljhay">Bento</a>
-    <p>fe</p>
 </body>
-    
+<section >
+    <h3 id="education">Education: </h3>
+    <ul>
+        <li></li>
+    </ul>
+</section>
+<section id="experience">
+    <h3>Experience:</h3>
+    <table>
+        <tr>
+            <th>
+                
+            </th>
+        </tr>
+    </table>
+</section>
+<section>
+    <h3>Reference:</h3>
+    <ol>
+        <li><a href="#profilelinks">Profile Link</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#experience">Experience</a></li>
+    </ol>
+</section>
