--- a/assignments/assignment-2/index.html
+++ b/assignments/assignment-2/index.html
@@ -14,18 +14,30 @@
     <img src="images/SFSULogo.jpg" alt="SFSU Logo" width="600" height="400">
     <h3>Hometown: Daly City, Ca.</h3>
 
+    <!--Hyperlink to different media profiles-->
     <h3 id="profilelinks">Profile Links:</h3>
     <a href="https://github.com/asori0113">Github</a>
     <a href="https://leetcode.com/u/aljhayjhassoriano/">Leetcode Profile</a>
     <a href="https://www.instagram.com/alj_sori/">Instagram</a>
     <a href="https://bento.me/aljhay">Bento</a>
 </body>
+
+<!--Education Section-->
 <section >
     <h3 id="education">Education: </h3>
+    <h4>Degrees/Certifcations:</h4>
     <ul>
         <li></li>
     </ul>
+    <h4>Courses/Acheivements:</h4>
+    <table>
+        <tr>
+            <th></th>
+        </tr>
+    </table>
 </section>
+
+<!--Experience Section-->
 <section id="experience">
     <h3>Experience:</h3>
     <table>
@@ -36,6 +48,8 @@
         </tr>
     </table>
 </section>
+
+<!--Reference Section-->
 <section>
     <h3>Reference:</h3>
     <ol>
