--- a/assignments/assignment-2/index.html
+++ b/assignments/assignment-2/index.html
@@ -11,7 +11,7 @@
     </header>
     <img src="images/ProfilePic.jpeg" alt="Profile Pic" width="300" height="400"> 
     <h3>School Name: SFSU (San Francisco State University)</h3>
-    <img src="images/SFSULogo.jpg" alt="SFSU Logo" width="600" height="400">
+    <img src="images/SFSULogo.jpeg" alt="SFSU Logo" width="300" height="400">
     <h3>Hometown: Daly City, Ca.</h3>
 
     <!--Hyperlink to different media profiles-->
@@ -25,14 +25,19 @@
 <!--Education Section-->
 <section >
     <h3 id="education">Education: </h3>
+    <!--Degrees/Certification with unordered list-->
     <h4>Degrees/Certifcations:</h4>
     <ul>
         <li></li>
     </ul>
-    <h4>Courses/Acheivements:</h4>
+    <!--Courses/Acheivements with tables-->
+    <h3 id="courses and acheivements">Courses/Acheivements:</h4>
     <table>
         <tr>
             <th></th>
+        </tr>
+        <tr>
+            <td></td>
         </tr>
     </table>
 </section>
@@ -40,16 +45,39 @@
 <!--Experience Section-->
 <section id="experience">
     <h3>Experience:</h3>
+    <!--Ordered List for work histpory and table within it for job information-->
     <ol>
         <li>
+            <h4>Teaspoon:</h4>
             <table>
                 <tr>
-                    <th>
-                        
-                    </th>
+                    <th>Position</th>
+                    <th>Date</th>
+                    <th>Description</th>
+                </tr>
+                <tr>
+                    <td>Shift Leader</td>
+                    <td>2/2022</td>
+                    <td>Managing the Store</td>
                 </tr>
             </table>
         </li>
+        <li>
+            <h4>Lillikoi:</h4>
+            <table>
+                <tr>
+                    <th>Position</th>
+                    <th>Date</th>
+                    <th>Description</th>
+                </tr>
+                <tr>
+                    <td>Shift Leader</td>
+                    <td>2/2022</td>
+                    <td>Managing the Store</td>
+                </tr>
+            </table>
+        </li>
+
     </ol>
     
 </section>
