--- a/assignments/assignment-2/index.html
+++ b/assignments/assignment-2/index.html
@@ -13,6 +13,14 @@
     <h3>School Name: SFSU (San Francisco State University)</h3>
     <img src="images/SFSULogo.jpeg" alt="SFSU Logo" width="300" height="400">
     <h3>Hometown: Daly City, Ca.</h3>
+    <img src="images/DalyCity.jpeg" alt="Hometown" width="300" height="400">
+
+    <!--Bio-->
+    <p>
+        I'm a Filipino student from SFSU that loves rock climbing and hiking. I'm currently on the hunt for a summer internship.
+        <br>
+        Though it might mean venturing away from home, I'm driven to do something I love. 
+    </p>
 
     <!--Hyperlink to different media profiles-->
     <h3 id="profilelinks">Profile Links:</h3>
@@ -28,16 +36,18 @@
     <!--Degrees/Certification with unordered list-->
     <h4>Degrees/Certifcations:</h4>
     <ul>
-        <li></li>
+        <li>Associates Degree - College of San Mateo</li>
     </ul>
     <!--Courses/Acheivements with tables-->
-    <h3 id="courses and acheivements">Courses/Acheivements:</h4>
+    <h3 id="coursesandacheivements">Courses/Acheivements:</h3>
     <table>
         <tr>
-            <th></th>
+            <th>Courses</th>
+            <th>Acheivements</th>
         </tr>
         <tr>
-            <td></td>
+            <td>Learning Python</td>
+            <td>Python Certifcation</td>
         </tr>
     </table>
 </section>
@@ -72,7 +82,7 @@
                 </tr>
                 <tr>
                     <td>Shift Leader</td>
-                    <td>2/2022</td>
+                    <td>4/2024</td>
                     <td>Managing the Store</td>
                 </tr>
             </table>
@@ -84,6 +94,26 @@
 
 <!--Contact Form-->
 <section>
+    <h3 id="contact">Contact Info Form: </h3>
+        <form action="/submit" method="post">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name">
+            <br>
+            <label for="phone">Phone Number:</label>
+            <input type="tel" id="phone" name="phone">
+            <br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email">
+            <br>
+            <label for="subject">Subject:</label>
+            <input type="text" name="subject" id="subject">
+            <br>
+            <label for="message">Message:</label>
+            <input type="text" name="message" id="message">
+            <br>
+            <button type="submit">SUBMIT</button>
+            
+        </form>
 </section>
 
 <!--Reference Section-->
@@ -93,5 +123,6 @@
         <li><a href="#profilelinks">Profile Link</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#experience">Experience</a></li>
+        <li><a href="#contact">Contact Form</a></li>
     </ol>
 </section>
