--- a/assignments/assignment-2/index.html
+++ b/assignments/assignment-2/index.html
@@ -169,10 +169,10 @@
         <h3>Reference:</h3>
         <ol>
             <li><a href="#profilelinks">--Profile Link--</a></li>
-            <li><a href="#bio"></a>--Bio--</li>
+            <li><a href="#bio">--Bio--</a></li>
             <li><a href="#education">--Education--</a></li>
             <li><a href="#experience">--Experience--</a></li>
-            <li><a href="#extracurricular"></a>--ExtraCurricular--</li>
+            <li><a href="#extracurricular">--ExtraCurricular--</a></li>
             <li><a href="#projects">--Projects--</a></li>
             <li><a href="#contact">--Contact Form--</a></li>
         </ol>
