added article semantics and template for iframe

--- a/assignments/assignment-2/index.html
+++ b/assignments/assignment-2/index.html
@@ -40,10 +40,12 @@
         <!--Hyperlink to different media profiles-->
         <section>
             <h3 id="profilelinks">--Profile Links--</h3>
-            <a href="https://github.com/asori0113">Github</a>
-            <a href="https://leetcode.com/u/aljhayjhassoriano/">Leetcode Profile</a>
-            <a href="https://www.instagram.com/alj_sori/">Instagram</a>
-            <a href="https://bento.me/aljhay">Bento</a>
+            <nav>
+                <a href="https://github.com/asori0113">Github</a>
+                <a href="https://leetcode.com/u/aljhayjhassoriano/">Leetcode Profile</a>
+                <a href="https://www.instagram.com/alj_sori/">Instagram</a>
+                <a href="https://bento.me/aljhay">Bento</a>
+            </nav>     
         </section>
         <br>
 
@@ -53,21 +55,27 @@
             <h3 id="education">--Education--</h3>
             <!--Degrees/Certification with unordered list-->
             <h4>Degrees/Certifcations:</h4>
-            <ul>
-                <li>Associates Degree - College of San Mateo</li>
-            </ul>
+            <article>
+                <ul>
+                    <li>Present - San Francisco State University</li>
+                    <li>Associates Degree - College of San Mateo</li>
+                </ul>
+            </article>
+
             <!--Courses/Acheivements with tables-->
             <h4>Courses/Acheivements:</h4>
-            <table>
-                <tr>
-                    <th>Courses</th>
-                    <th>Acheivements</th>
-                </tr>
-                <tr>
-                    <td>Learning Python</td>
-                    <td>Python Certifcation</td>
-                </tr>
-            </table>
+            <article>
+                <table>
+                    <tr>
+                        <th>Courses</th>
+                        <th>Acheivements</th>
+                    </tr>
+                    <tr>
+                        <td>Learning Python</td>
+                        <td>Python Certifcation</td>
+                    </tr>
+                </table>
+            </article>   
         </section>
         <br>
 
@@ -78,47 +86,52 @@
             <ol>
                 <li>
                     <h4>Teaspoon:</h4>
-                    <table>
-                        <tr>
-                            <th>Position</th>
-                            <th>Date</th>
-                            <th>Description</th>
-                        </tr>
-                        <tr>
-                            <td>Shift Leader</td>
-                            <td>2/2022</td>
-                            <td>Managing the Store</td>
-                        </tr>
-                    </table>
-                </li>
-                <li>
-                    <h4>Lillikoi:</h4>
-                    <table>
-                        <tr>
-                            <th>Position</th>
-                            <th>Date</th>
-                            <th>Description</th>
-                        </tr>
-                        <tr>
-                            <td>Shift Leader</td>
-                            <td>4/2024</td>
-                            <td>Managing the Store</td>
-                        </tr>
-                    </table>
+                    <article>
+                        <table>
+                            <tr>
+                                <th>Position</th>
+                                <th>Date</th>
+                                <th>Description</th>
+                            </tr>
+                            <tr>
+                                <td>Shift Leader</td>
+                                <td>2/2022</td>
+                                <td>Managing the Store</td>
+                            </tr>
+                        </table>
+                    </article>
                 </li>
 
+                <li>
+                    <h4>Lillikoi:</h4>
+                    <article>
+                        <table>
+                            <tr>
+                                <th>Position</th>
+                                <th>Date</th>
+                                <th>Description</th>
+                            </tr>
+                            <tr>
+                                <td>Shift Leader</td>
+                                <td>4/2024</td>
+                                <td>Managing the Store</td>
+                            </tr>
+                        </table>
+                    </article>
+                </li>
             </ol>
-            
         </section>
         <br>
 
         <!--ExtraCurricular Section-->
         <section>
             <h3 id="extracurricular">--ExtraCurricular--</h3>
-            <ul>
-                <li>Rock climbing</li>
-                <li>Hiking</li>
-            </ul>
+            <article>
+                <ul>
+                    <li>Rock climbing</li>
+                    <li>Hiking</li>
+                </ul>
+            </article>
         </section>
         <br>
 
