added nav and listing for links

--- a/assignments/assignment-2/index.html
+++ b/assignments/assignment-2/index.html
@@ -41,10 +41,12 @@
         <section>
             <h3 id="profilelinks">--Profile Links--</h3>
             <nav>
-                <a href="https://github.com/asori0113">Github</a>
-                <a href="https://leetcode.com/u/aljhayjhassoriano/">Leetcode Profile</a>
-                <a href="https://www.instagram.com/alj_sori/">Instagram</a>
-                <a href="https://bento.me/aljhay">Bento</a>
+                <ul>
+                    <li><a href="https://github.com/asori0113">Github</a></li>
+                    <li><a href="https://leetcode.com/u/aljhayjhassoriano/">Leetcode Profile</a></li>
+                    <li><a href="https://www.instagram.com/alj_sori/">Instagram</a></li>
+                    <li><a href="https://bento.me/aljhay">Bento</a></li>
+                </ul>               
             </nav>     
         </section>
         <br>
