--- a/assignments/assignment-2/index.html
+++ b/assignments/assignment-2/index.html
@@ -11,6 +11,12 @@
         <h1>My Portfolio - Aljhay Soriano</h2>
     </header>
 
+    <!--Contact Information-->
+    <section>
+        <h3>--Contact information--</h3>
+        <p>Email: aljhayjhass@outlook.com ------- Phone Number: (650)201-****</p>
+    </section>
+
     <iframe src="" frameborder="0"></iframe>
 
     <!--About Me w/ images-->
@@ -55,18 +61,16 @@
         <!--Education Section-->
         <section>
             <h3 id="education">--Education--</h3>
-            <!--Degrees/Certification with unordered list-->
-            <h4>Degrees/Certifcations:</h4>
-            <article>
+
+             <!--Degrees/Certification with unordered list-->
+                <h4>Degrees/Certifcations:</h4>
                 <ul>
                     <li>Present - San Francisco State University</li>
                     <li>Associates Degree - College of San Mateo</li>
                 </ul>
-            </article>
 
             <!--Courses/Acheivements with tables-->
-            <h4>Courses/Acheivements:</h4>
-            <article>
+                <h4>Courses/Acheivements:</h4>
                 <table>
                     <tr>
                         <th>Courses</th>
@@ -77,80 +81,73 @@
                         <td>Python Certifcation</td>
                     </tr>
                 </table>
-            </article>   
         </section>
         <br>
 
         <!--Experience Section-->
         <section>
             <h3 id="experience">--Experience--</h3>
+
             <!--Ordered List for work histpory and table within it for job information-->
             <ol>
                 <li>
                     <h4>Teaspoon:</h4>
-                    <article>
-                        <table>
-                            <tr>
-                                <th>Position</th>
-                                <th>Date</th>
-                                <th>Description</th>
-                            </tr>
-                            <tr>
-                                <td>Shift Leader</td>
-                                <td>2/2022</td>
-                                <td>Managing the Store</td>
-                            </tr>
-                        </table>
-                    </article>
+                    <table>
+                        <tr>
+                            <th>Position</th>
+                            <th>Date</th>
+                            <th>Description</th>
+                        </tr>
+                        <tr>
+                            <td>Shift Leader</td>
+                            <td>2/2022</td>
+                            <td>Managing the Store</td>
+                        </tr>
+                    </table>
+                    
                 </li>
-
                 <li>
                     <h4>Lillikoi:</h4>
-                    <article>
-                        <table>
-                            <tr>
-                                <th>Position</th>
-                                <th>Date</th>
-                                <th>Description</th>
-                            </tr>
-                            <tr>
-                                <td>Shift Leader</td>
-                                <td>4/2024</td>
-                                <td>Managing the Store</td>
-                            </tr>
-                        </table>
-                    </article>
+                    <table>
+                        <tr>
+                            <th>Position</th>
+                            <th>Date</th>
+                            <th>Description</th>
+                        </tr>
+                        <tr>
+                            <td>Shift Leader</td>
+                            <td>4/2024</td>
+                            <td>Managing the Store</td>
+                        </tr>
+                    </table>
+
                 </li>
             </ol>
         </section>
         <br>
 
         <!--ExtraCurricular Section-->
-        <section>
-            <h3 id="extracurricular">--ExtraCurricular--</h3>
-            <article>
+        <section>   
+                <h3 id="extracurricular">--ExtraCurricular--</h3>
                 <ul>
                     <li>Rock climbing</li>
                     <li>Hiking</li>
                 </ul>
-            </article>
         </section>
         <br>
 
         <!--Main Content: Projects Section-->
         <section>
-
                 <h3 id="projects">--Projects--</h3>
-                <ul>
-                    <article>
-                        <li>HTML PORTFOLIO WEBSITE</li>
-                        <p>Website created for personal website using CSS, HTML and JavaScript</p>
-                    </article>
-                    <article>
-                        <li>AR REALITY USING OPENCV</li>
-                        <p>Uses homography for a 2D scan of a surface which then processes exclusive features of scan and creates a 3D image above it</p>
-                    </article>
-                </ul>
+                <article>
+                    <h4>HTML PORTFOLIO WEBSITE</h4>
+                    <p>Website created for personal website using CSS, HTML and JavaScript</p>
+                </article>
+ 
+                <article>
+                    <h4>AR REALITY USING OPENCV</h4>
+                    <p>Uses homography for a 2D scan of a surface which then processes exclusive features of scan and creates a 3D image above it</p>
+                </article>
         </section> 
         <br>
     </main>
