Finished submission analysis links to portolio and calculator and AI models of calculator

--- a/assignments/assignment-4/calculator.html
+++ b/assignments/assignment-4/calculator.html
@@ -59,7 +59,11 @@
         }
     </style>
 
+    <!--anchor for back page-->
+    <a href="portfolio.html">--Back to Portfolio--</a>
+
     <body>
+        
         <!--Input Form with scripts-->
         <form id="calculator" name="calculator">
             <input type="text" name="calculation" id="calculation" disabled>
