--- a/assignments/assignment-4/portfolio.html
+++ b/assignments/assignment-4/portfolio.html
@@ -22,6 +22,7 @@
                 box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
                 padding: 12px;
                 z-index: 1000;
+                color: black
             }
     
             .theme-switcher h3 {
@@ -227,6 +228,11 @@
                         <article class="project-card">
                             <h4>HTML PORTFOLIO WEBSITE</h4>
                             <p>Website created for personal website using CSS, HTML and JavaScript</p>
+                        </article>
+
+                        <article class="project-card">
+                            <h4><a href="calculator.html">CALCULATOR REPLICA</a></h4>
+                            <p>Creating a replica of our phone calculators in my case apple calculator</p>
                         </article>
         
                         <article class="project-card">
