Updated submission as well as memory indicator, redid ai models because of html structure change due to memory

--- a/assignments/assignment-4/calculator.html
+++ b/assignments/assignment-4/calculator.html
@@ -66,6 +66,7 @@
         
         <!--Input Form with scripts-->
         <form id="calculator" name="calculator">
+            <input type="text" name="indicator" id="indicator" disabled>
             <input type="text" name="calculation" id="calculation" disabled>
             <input type="text" name="display" id="display" disabled>
 
